twentythirteen-blog-tg/style.css
@import url("../twentythirteen/style.css");
/*
Theme Name: Twenty Thirteen (Child) Blog.Tanaguru.com
Theme URI: TBD
Author: Matthieu Faure
Author URI: http://www.tanaguru.com/
Description: Theme dedicated to Blog.Tanaguru.com based on theme Twenty Thirteen 
Version: 1.0.0
License: GNU General Public License v2 or later
License URI: http://www.gnu.org/licenses/gpl-2.0.html
Tags: black, brown, orange, tan, white, yellow, light, one-column, two-columns, right-sidebar, flexible-width, custom-header, custom-menu, editor-style, featured-images, microformats, post-formats, rtl-language-support, sticky-post, translation-ready
Text Domain: blogtg
Template: twentythirteen

This theme, like WordPress, is licensed under the GPL.
Use it to make something cool, have fun, and share what you've learned with others.
*/
@font-face {
  font-family: 'montserrat';
  src: url('Fonts/montserrat-regular-webfont.eot');
  src: url('Fonts/montserrat-regular-webfont.eot?#iefix') format('embedded-opentype'), url('Fonts/montserrat-regular-webfont.woff') format('woff'), url('Fonts/montserrat-regular-webfont.ttf') format('truetype'), url('Fonts/montserrat-regular-webfont.svg#montserratregular') format('svg');
  font-weight: normal;
  font-style: normal;
}
@font-face {
  font-family: 'montserrat';
  src: url('Fonts/montserrat-bold-webfont.eot');
  src: url('Fonts/montserrat-bold-webfont.eot?#iefix') format('embedded-opentype'), url('Fonts/montserrat-bold-webfont.woff') format('woff'), url('Fonts/montserrat-bold-webfont.ttf') format('truetype'), url('Fonts/montserrat-bold-webfont.svg#montserratbold') format('svg');
  font-weight: bold;
  font-style: normal;
}
@font-face {
  font-family: 'open_sans';
  src: url('Fonts/opensans-bold-webfont.eot');
  src: url('Fonts/opensans-bold-webfont.eot?#iefix') format('embedded-opentype'), url('Fonts/opensans-bold-webfont.woff') format('woff'), url('Fonts/opensans-bold-webfont.ttf') format('truetype'), url('Fonts/opensans-bold-webfont.svg#open_sansbold') format('svg');
  font-weight: bold;
  font-style: normal;
}
@font-face {
  font-family: 'open_sans';
  src: url('Fonts/opensans-bolditalic-webfont.eot');
  src: url('Fonts/opensans-bolditalic-webfont.eot?#iefix') format('embedded-opentype'), url('Fonts/opensans-bolditalic-webfont.woff') format('woff'), url('Fonts/opensans-bolditalic-webfont.ttf') format('truetype'), url('Fonts/opensans-bolditalic-webfont.svg#open_sansbold_italic') format('svg');
  font-weight: bold;
  font-style: italic;
}
@font-face {
  font-family: 'open_sans';
  src: url('Fonts/opensans-extrabold-webfont.eot');
  src: url('Fonts/opensans-extrabold-webfont.eot?#iefix') format('embedded-opentype'), url('Fonts/opensans-extrabold-webfont.woff') format('woff'), url('Fonts/opensans-extrabold-webfont.ttf') format('truetype'), url('Fonts/opensans-extrabold-webfont.svg#open_sansextrabold') format('svg');
  font-weight: 900;
  font-style: normal;
}
@font-face {
  font-family: 'open_sans';
  src: url('Fonts/opensans-extrabolditalic-webfont.eot');
  src: url('Fonts/opensans-extrabolditalic-webfont.eot?#iefix') format('embedded-opentype'), url('Fonts/opensans-extrabolditalic-webfont.woff') format('woff'), url('Fonts/opensans-extrabolditalic-webfont.ttf') format('truetype'), url('Fonts/opensans-extrabolditalic-webfont.svg#open_sansextrabold_italic') format('svg');
  font-weight: 900;
  font-style: italic;
}
@font-face {
  font-family: 'open_sans';
  src: url('Fonts/opensans-italic-webfont.eot');
  src: url('Fonts/opensans-italic-webfont.eot?#iefix') format('embedded-opentype'), url('Fonts/opensans-italic-webfont.woff') format('woff'), url('Fonts/opensans-italic-webfont.ttf') format('truetype'), url('Fonts/opensans-italic-webfont.svg#open_sansitalic') format('svg');
  font-weight: normal;
  font-style: italic;
}
@font-face {
  font-family: 'open_sans';
  src: url('Fonts/opensans-light-webfont.eot');
  src: url('Fonts/opensans-light-webfont.eot?#iefix') format('embedded-opentype'), url('Fonts/opensans-light-webfont.woff') format('woff'), url('Fonts/opensans-light-webfont.ttf') format('truetype'), url('Fonts/opensans-light-webfont.svg#open_sanslight') format('svg');
  font-weight: 300;
  font-style: normal;
}
@font-face {
  font-family: 'open_sans';
  src: url('Fonts/opensans-lightitalic-webfont.eot');
  src: url('Fonts/opensans-lightitalic-webfont.eot?#iefix') format('embedded-opentype'), url('Fonts/opensans-lightitalic-webfont.woff') format('woff'), url('Fonts/opensans-lightitalic-webfont.ttf') format('truetype'), url('Fonts/opensans-lightitalic-webfont.svg#open_sanslight_italic') format('svg');
  font-weight: 300;
  font-style: italic;
}
@font-face {
  font-family: 'open_sans';
  src: url('Fonts/opensans-regular-webfont.eot');
  src: url('Fonts/opensans-regular-webfont.eot?#iefix') format('embedded-opentype'), url('Fonts/opensans-regular-webfont.woff') format('woff'), url('Fonts/opensans-regular-webfont.ttf') format('truetype'), url('Fonts/opensans-regular-webfont.svg#open_sansregular') format('svg');
  font-weight: normal;
  font-style: normal;
}
@font-face {
  font-family: 'open_sans';
  src: url('Fonts/opensans-semibold-webfont.eot');
  src: url('Fonts/opensans-semibold-webfont.eot?#iefix') format('embedded-opentype'), url('Fonts/opensans-semibold-webfont.woff') format('woff'), url('Fonts/opensans-semibold-webfont.ttf') format('truetype'), url('Fonts/opensans-semibold-webfont.svg#open_sanssemibold') format('svg');
  font-weight: 600;
  font-style: normal;
}
@font-face {
  font-family: 'open_sans';
  src: url('Fonts/opensans-semibolditalic-webfont.eot');
  src: url('Fonts/opensans-semibolditalic-webfont.eot?#iefix') format('embedded-opentype'), url('Fonts/opensans-semibolditalic-webfont.woff') format('woff'), url('Fonts/opensans-semibolditalic-webfont.ttf') format('truetype'), url('Fonts/opensans-semibolditalic-webfont.svg#open_sanssemibold_italic') format('svg');
  font-weight: 600;
  font-style: italic;
}
html,
button,
input,
select,
textarea {
  font-family: open_sans, Helvetica, sans-serif;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  clear: both;
  font-family: Montserrat, Helvetica, sans-serif;
  line-height: 1.3;
}
.site,
.navbar {
  max-width: none;
}
.navbar {
  background-color: #efefef;
}
#masthead {
  /* from http://www.colorzilla.com/gradient-editor/ +++ init color: #00d9f0 +++ end color: #008594 */
  background: #00d9f0;
  /* Old browsers */
  background: -moz-radial-gradient(center, ellipse cover, #00d9f0 0%, #008594 100%);
  /* FF3.6+ */
  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, #00d9f0), color-stop(100%, #008594));
  /* Chrome,Safari4+ */
  background: -webkit-radial-gradient(center, ellipse cover, #00d9f0 0%, #008594 100%);
  /* Chrome10+,Safari5.1+ */
  background: -o-radial-gradient(center, ellipse cover, #00d9f0 0%, #008594 100%);
  /* Opera 12+ */
  background: -ms-radial-gradient(center, ellipse cover, #00d9f0 0%, #008594 100%);
  /* IE10+ */
  background: radial-gradient(ellipse at center, #00d9f0 0%, #008594 100%);
  /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00d9f0', endColorstr='#008594', GradientType=1);
  /* IE6-9 fallback on horizontal gradient */
}
.site-header .home-link {
  background: url(Images/bg-noise.png) repeat top left;
  background: url(Images/Montagnes.png) no-repeat bottom right;
  padding-top: 30px;
}
.site-logo {
  width: 150px;
  display: inline-block;
  vertical-align: middle;
}
.site-title {
  padding: 0 10px;
  display: inline-block;
  vertical-align: middle;
}

